<resources>
    <string name="app_name">VUTimer</string>
    <!--string name="action_settings">Settings</string-->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="nav_item_courses">Courses</string>
    <string name="nav_item_tasks">Tasks</string>
    <!--string name="nav_item_timetable">Timetable</string-->

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_courses</item>
        <item>@string/nav_item_tasks</item>
        <!--item>@string/nav_item_timetable</item-->
    </string-array>

    <string name="title_courses">Courses</string>
    <string name="title_tasks">Tasks</string>
    <!--string name="title_timetable">Timetable</string-->
    <string-array name="courseNameArr">
        <item>Anglu k.</item>
        <item>Kombinatorika</item>
        <item>Statistika</item>
        <item>Pascalis</item>
        <item>C++</item>
        <item>Android</item>
    </string-array>

    <string-array name="courseDescrArr">
        <item>Pas P.Petraiti</item>
        <item>Antradieni</item>
        <item>Treciadieni</item>
        <item>Pas A.Antana</item>
        <item>Kurti programa</item>
        <item>App creation</item>
    </string-array>

    <string-array name="taskNameArr">
        <item>Kontrolinis</item>
        <item>Pristatymas</item>
        <item>Namu darbai</item>
        <item>Kolis</item>
        <item>Kolis</item>
        <item>Atsiskaitymas</item>
    </string-array>

    <string-array name="taskDescrArr">
        <item>Kontrolinis</item>
        <item>Pristatymas</item>
        <item>Namu darbai</item>
        <item>Kolis</item>
        <item>Kolis</item>
        <item>Atsiskaitymas</item>
    </string-array>
    <string-array name="taskParentArr">
        <item>Kombinatorika</item>
        <item>Kombinatorika</item>
        <item>Anglu k.</item>
        <item>Anglu k.</item>
        <item>C++</item>
        <item>Android</item>
    </string-array>
    <string-array name="colorsTitle">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Brown</item>
    </string-array>
    <string-array name="colorPrime">
        <item>#ff0000</item>
        <item>#66ff33</item>
        <item>#0099ff</item>
        <item>#9a6632</item>
    </string-array>
    <string-array name="color">
        <item>#990000</item>
        <item>#33cc33</item>
        <item>#0033cc</item>
        <item>#734d26</item>
    </string-array>



    <string-array name="drawerMenu">
        <item>Courses</item>
        <item>Tasks</item>
        <!--item>Timetable</item-->
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_course_add_button">Add course</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="settings_delete">Delete</string>
    <string name="task_name">Task_name</string>
    <string name="task_time_name">Task_Time_name</string>
    <string name="task_description">Description</string>
    <string name="task_description_new">Task Description</string>
    <string name="task_time_description_new">Task Time Description</string>
    <string name="task_time_description">Description</string>
    <string name="task_name_new">Task name</string>
    <string name="task_time_name_new">Task Time name</string>
    <string name="add_task_button">ADD TASK</string>
    <string name="photo_string">Welcome!</string>
    <string name="chart">Chart Fragment</string>
    <string name="switch_theme">Switch Theme</string>

</resources>
