<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.justinas.vutimer.activity.TaskNewItemCreate">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:layout_width="320dp"
        android:layout_height="32dp"
        android:id="@+id/task_name_edit"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:paddingTop="6dp"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:autoText="false"
        android:hint="@string/task_name_new"
        android:background = "@android:color/transparent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/c_p_divider1"
        android:layout_alignRight="@+id/task_name_edit"
        android:layout_alignEnd="@+id/task_name_edit"
        android:layout_below="@+id/task_name_edit"
        android:layout_alignLeft="@+id/task_description_edit"
        android:layout_alignStart="@+id/task_description_edit" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/task_description_edit"
        android:textSize="16sp"
        android:layout_below="@+id/c_p_divider1"
        android:layout_alignLeft="@+id/task_name_edit"
        android:layout_alignStart="@+id/task_name_edit"
        android:paddingTop="6dp"
        android:hint="@string/task_description_new"
        android:background = "@android:color/transparent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/c_p_divider2"
        android:layout_alignRight="@+id/task_description_edit"
        android:layout_alignEnd="@+id/task_description_edit"
        android:layout_below="@+id/task_description_edit"
        android:layout_alignLeft="@+id/task_description_edit"
        android:layout_alignStart="@+id/task_description_edit" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_people"
        android:layout_above="@+id/c_p_divider1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src ="@drawable/ic_people"
        android:layout_alignTop="@+id/c_p_divider1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/new_course_add_button"
        android:layout_toLeftOf="@+id/c_p_divider1"
        android:layout_toStartOf="@+id/c_p_divider1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_button"
        android:id="@+id/new_course_add_button"
        android:layout_below="@+id/c_p_divider2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:onClick="saveNewCourse"/>

</RelativeLayout>
